Fix Jenkins CSS
  There were some problems related to the nodes page and the logout link making overlapping with
  other buttons. These changes should solve those issues.

--- a/roles/jenkins/files/ci-hibernate-v0012.css
+++ b/roles/jenkins/files/ci-hibernate-v0012.css
@@ -32,6 +32,10 @@ footer {
  position: fixed;
 }
 
+#main-panel {
+   padding-top: 40px;
+}
+
 #page-body.fixedGridLayout {
    top: 130px
 }
@@ -45,9 +49,8 @@ footer {
   z-index: 1002;
 }
 
-.dashboard {
-  position: absolute;
-  top: 180px;
+#description {
+  display: inline-block;
 }
 
 #description a {
